@@ -1,3 +1,0 @@
-.arch-ids
-Makefile
-mkmf.log
