@@ -1,5 +1,9 @@
 2005-09-30  Kouhei Sutou  <kou@cozmixng.org>
 
+	* README: update dependencies.
+
+	* packages/gtkcairo, packages/svgcairo: remove.
+
 	* setup.rb: update to 3.3.1.
 
 2005-09-29  Kouhei Sutou  <kou@cozmixng.org>
